<?xml version="1.0" encoding="utf-8"?>
<!-- Author: Fedor Tsyganov -->
<!-- Date: 10/03/2013 -->
<!-- Application: TemperatureConverter -->
<!-- File: strings.xml -->
<resources>

    <string name="app_name">TemperatureConverter</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="hint"> Enter temperature</string>
    <string name="radioButtonToFahrenheit">Celsius to Fahrenheit</string>
    <string name="radioButtonToCelsius">Fahrenheit to Celsius</string>
    <string name="buttonGo">GO</string>
    <string name="hintName">Enter your name</string>
    <string name="password">Password:</string>
    <string name="name">Name:</string>
    <string name="buttonSubmit">Submit</string>
    <string name="title_activity_see_scores">SeeScores</string>

</resources>
