<!-- Author: Fedor Tsyganov -->
<!-- Date: 10/03/2013 -->
<!-- Application: TemperatureConverter -->
<!-- File: activity_temperature_converter.xml -->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
<RadioGroup android:id="@+id/radioGrpTempConverter"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <RadioButton
        android:id="@+id/radioButton1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/radioButtonToFahrenheit"
        android:textSize="15sp"
        android:textStyle="bold" />

    <RadioButton
        android:id="@+id/radioButton2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/radioButtonToCelsius"
        android:textSize="15sp"
        android:textStyle="bold" />

</RadioGroup>
<TableLayout 
    android:layout_width="match_parent"
    android:layout_height="match_parent" >
    <TableRow >

    <EditText
        android:id="@+id/editText1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/hint"
        android:inputType="numberDecimal|numberSigned"
        android:singleLine="true"
        android:textSize="15sp" />

    <Button
        android:id="@+id/buttonGO"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/buttonGo"
        android:textSize="15sp" />

    </TableRow>
    <TableRow >

    <EditText
        android:id="@+id/editText2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:textSize="15sp" />

    </TableRow>
</TableLayout>
</LinearLayout>
